--- a/scss/main.scss
+++ b/scss/main.scss
@@ -102,6 +102,11 @@ body {
 		}
 	}
 }
+.attribution{
+	font-size: 2rem;
+	text-align: center;
+	
+}
 
 @media (min-width: 700px) {
 	.card {
@@ -127,6 +132,7 @@ body {
 			height: 52.5rem;
 			padding: 3rem;
 			&-product {
+				margin-top: 0;
 				&-title {
 					font-weight: bold;
 					font-size: 3.6rem;
@@ -139,6 +145,9 @@ body {
 				&-new {
 					font-size: 4rem;
 				}
+			}
+			&-btn {
+				margin-bottom: -1.9rem;
 			}
 		}
 	}
